<resources>
    <string name="app_name">EduSchool</string>

    <string name="action_settings">Parametres</string>
    <string name="title_activity_cultureg">Culture Générale</string>
    <string name="title_activity_QCM">QCM</string>
    <string name="title_activity_qcm">QCM</string>
    <string name="title_activity_niveau">Choisi ton niveau</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_math">Math</string>
    <string name="title_activity_multiplication">Multiplication</string>
    <string name="title_activity_resultat">Resultat</string>
    <string name="title_activity_user">Mon espace</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_inscription">Inscription</string>

    <!-- Defaut -->
    <string name="defaut">autre</string>
    <string name="vide"></string>
    <string name="hello_world">Hello world!</string>

    <!-- Boutons -->
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="valider">Valider</string>
    <string name="choixImage">Importer un avatar</string>

    <!-- Menu -->
    <string name="math">Math</string>
    <string name="culture">Culture G</string>
    <string name="qcm">QCM</string>
    <string name="monCompte">Mon compte</string>

    <!-- Niveau -->
    <string name="addition">Addition</string>
    <string name="soustraction">Soustraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="geographie">Geographie</string>
    <string name="francais">Français</string>
    <string name="anglais">Anglais</string>
    <string name="departement">Departement</string>

    <string name="NiveauOk">Niveau réussi</string>
    <string name="NiveauEnCour">Niveau en cour</string>
    <string name="NiveauKo">Niveau non débloqué</string>

    <!-- Textes -->
    <string name="resultat">Resultat : </string>
    <string name="score">Score : </string>
    <string name="meilleurScore">Meilleur score : </string>
    <string name="avatar">Avatar</string>

    <string name="consigne_math">Saisissez le résultat du calcul</string>
    <string name="consigne_cultureg">Saisissez la réponse à la question</string>
    <string name="consigne_qcm">Cliquer sur la bonne réponse</string>

</resources>
