<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Bienvenu, choisissez une activitée !"
        android:id="@+id/textViewPresentation"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPresentation"
        android:layout_gravity="center"
        android:id="@+id/LinearLayoutMenu">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="110dip"
            android:layout_height="fill_parent"
            android:onClick="onMathClick" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton6"
                android:src="@drawable/math"
                android:layout_gravity="center_horizontal"
                android:onClick="onMathClick"
                android:minHeight="55dp"
                android:minWidth="55dp"
                android:nestedScrollingEnabled="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/math"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView8" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_below="@+id/textViewPresentation"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:onClick="onQcmClick"
            android:nestedScrollingEnabled="false">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton9"
                android:src="@drawable/qcm"
                android:layout_gravity="center_horizontal"
                android:onClick="onQcmClick"
                android:nestedScrollingEnabled="false"
                android:minHeight="55dp"
                android:minWidth="55dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/qcm"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView10" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="110dip"
            android:layout_height="fill_parent"
            android:onClick="onCulturegClick">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:src="@drawable/cultureg"
                android:layout_gravity="center_horizontal"
                android:onClick="onCulturegClick"
                android:minHeight="55dp"
                android:minWidth="55dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/culture"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/LinearLayoutMenu"
        android:id="@+id/lLayoutCoIns">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:id="@+id/LinearLogin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/connexion"
                android:id="@+id/textView5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTxtLogin" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTxtPassword"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connexion"
                android:id="@+id/btnLogin"
                android:onClick="onConnexionClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_below="@id/LinearLayoutMenu"
            android:id="@+id/LinearInscription">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Inscription"
                android:id="@+id/txtView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTxtInscriptionLogin" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTxtInscriptionPassword"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgVPreview"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:nestedScrollingEnabled="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="image"
                android:id="@+id/button2"
                android:onClick="onClickChoixImage" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inscription"
                android:id="@+id/btnInscription"
                android:onClick="onInscriptionClick" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/LinearDeconnexion"
        android:gravity="center|bottom"
        >

    </LinearLayout>

</RelativeLayout>
